--- a/assets/scss/admin/_about.scss
+++ b/assets/scss/admin/_about.scss
@@ -129,6 +129,12 @@
       }
     }
 
+    @media only screen and (max-width: 783px) {
+      .plugin-features {
+        grid-template-columns: none;
+      }
+    }
+
     @media only screen and (min-width: 1600px) {
       .team-members {
         grid-template-columns: repeat(auto-fit, minmax(150px, 250px));
